--- a/.gitignore
+++ b/.gitignore
@@ -99,8 +99,4 @@ ENV/
 
 # mypy
 .mypy_cache/
-.idea/workspace.xml
-.idea/modules.xml
-.idea/misc.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/testpyuv.iml
+.idea/
